# skillsafe-cli

./: .gitignore  LICENSE  Makefile  README.md  SKILL.md  pyproject.toml  submit-demo-comment.md  submit-skill-demo.md
scripts/: skillsafe.py
src/skillsafe/: __init__.py  __main__.py  _cli.py
tests/: test_skill_management.py  test_skillsafe.py
