[build-system]
requires = ["setuptools>=64"]
build-backend = "setuptools.build_meta"

[project]
name = "skillsafe"
dynamic = ["version"]
description = "Secured skill registry client for AI coding tools — scan, save, share, install, and verify AI skills."
readme = "README.md"
license = "MIT"
requires-python = ">=3.8"
authors = [
    { name = "SkillSafe", email = "hello@skillsafe.ai" },
]
keywords = [
    "ai",
    "skills",
    "security",
    "scanning",
    "claude",
    "cursor",
    "windsurf",
    "codex",
    "registry",
]
classifiers = [
    "Development Status :: 4 - Beta",
    "Environment :: Console",
    "Intended Audience :: Developers",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Topic :: Security",
    "Topic :: Software Development :: Quality Assurance",
]

[project.urls]
Homepage = "https://skillsafe.ai"
Documentation = "https://skillsafe.ai/docs/"
Repository = "https://github.com/skillsafe/skillsafe-cli"
Issues = "https://github.com/skillsafe/skillsafe-cli/issues"

[project.scripts]
skillsafe = "skillsafe._cli:main"

[tool.setuptools.dynamic]
version = { attr = "skillsafe._cli.VERSION" }

[tool.setuptools.packages.find]
where = ["src"]
